# setup.cfg file at the root directory

[metadata]
name = Any_Face_Clustering
version = 1.0.1
author = Souvik Majumder
description = This is a Face Clustering Engine project
#long_description = This is a longer description for the project
url = https://github.com/souvikmajumder26/Any-Face-Clustering
keywords = machinelearning, deeplearning

[options]
python_requires = >=3.7, <4
install_requires = 
    pandas
    matplotlib
