# setup.cfg file at the root directory

[metadata]
name = Any-Face-Clustering
version = 1.0.1
author = Souvik Majumder
description = This is a Face Clustering Engine project
long_description = A Face Clustering Engine has been developed utilizing OpenCV, Face Recognition & DBSCAN (scikit-learn) python libraries. The project has been deployed as a Streamlit Web App which provides users the facility to upload their own images (or images they want to test with) and be delivered with the images grouped according to the individual unique faces contained in them. A Face Clustering Engine in essence performs grouping of user-provided images according to the unique faces contained in them. Unsupervised Learning being at the core of this Face Clustering Engine enables it to cluster/group images by faces which it hasn't even seen (trained on) yet. Thus it is applicable to Any Face.
url = https://github.com/souvikmajumder26/Any-Face-Clustering
keywords = python, opencv, machine-learning, deep-learning, computer-vision, clustering, webapp, face-recognition, face-detection, dlib, unsupervised-learning, dbscan, dbscan-clustering, unlabeled-data, face-clustering, google-colab, streamlit, streamlit-webapp, any-face-clustering

[options]
python_requires = >=3.7, <4
install_requires = 
    os
    time
    shutil
    tempfile
    numpy
    streamlit
    opencv-python
    face-recognition
    scikit-learn
    imutils
